[tool.poetry]
name = "radon_sofia"
version = "0.1.0"
description = "radon project"
authors = ["София <sofiatrufanowa@yandex.ru>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/SofiaTrufanova/Discrete_Radon"
repository = "https://github.com/SofiaTrufanova/Discrete_Radon"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
requests = "^2.31.0"
numpy = "^1.26.4"
scikit-image = "^0.23.2"
opencv-python = "^4.9.0.80"
desert = "^2022.9.22"
marshmallow = "^3.21.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"
scikit-image = "^0.23.2"
coverage = "^7.5.1"
pytest-cov = "^5.0.0"
nox = "^2024.4.15"
pytest-mock = "^3.14.0"
mypy = "^1.10.0"
pytype = {version = "^2024.4.11", python = "3"}
typeguard = "^4.2.1"
flake8-annotations = "^3.1.0"
flake8-docstrings = "^1.7.0"
darglint = "^1.8.1"
xdoctest = "^1.1.3"
sphinx = "^7.3.7"
sphinx-autodoc-typehints = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
radon_sofia = "radon_sofia.discrete_radon:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["radon_sofia"]

[tool.coverage.report]
show_missing = true
fail_under = 100
